Complete Arabic numeral and RTL fixes for all legal pages - terms.html: Added data-i18n to 9 section numbers, Arabic numerals (١-٩), hide English hero subtitle - refund.html: Added data-i18n to 6 section numbers, Arabic numerals (١-٦), hide English hero subtitle - All pages now fully translated in Arabic mode

--- a/public/refund.html
+++ b/public/refund.html
@@ -716,7 +716,7 @@
             <!-- Section 1 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">1</div>
+                    <div class="section-number" data-i18n="refund.s1.num">1</div>
                     <h2 class="section-title" data-i18n="refund.s1.title">7-Day Return Guarantee</h2>
                 </div>
                 <p data-i18n="refund.s1.intro">All parts purchased through QScrap come with a 7-day return guarantee
@@ -737,7 +737,7 @@
             <!-- Section 2 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">2</div>
+                    <div class="section-number" data-i18n="refund.s2.num">2</div>
                     <h2 class="section-title" data-i18n="refund.s2.title">Cancellation Stages & Refunds</h2>
                 </div>
                 <p data-i18n="refund.s2.intro">Your refund amount depends on when you cancel your order:</p>
@@ -795,7 +795,7 @@
             <!-- Section 3 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">3</div>
+                    <div class="section-number" data-i18n="refund.s3.num">3</div>
                     <h2 class="section-title" data-i18n="refund.s3.title">Non-Refundable Items</h2>
                 </div>
                 <p data-i18n="refund.s3.intro">The following situations are not eligible for refund:</p>
@@ -817,7 +817,7 @@
             <!-- Section 4 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">4</div>
+                    <div class="section-number" data-i18n="refund.s4.num">4</div>
                     <h2 class="section-title" data-i18n="refund.s4.title">How to Request a Refund</h2>
                 </div>
                 <p data-i18n="refund.s4.intro">To request a refund:</p>
@@ -836,7 +836,7 @@
             <!-- Section 5 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">5</div>
+                    <div class="section-number" data-i18n="refund.s5.num">5</div>
                     <h2 class="section-title" data-i18n="refund.s5.title">Refund Processing Time</h2>
                 </div>
                 <ul>
@@ -856,7 +856,7 @@
             <!-- Section 6 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">6</div>
+                    <div class="section-number" data-i18n="refund.s6.num">6</div>
                     <h2 class="section-title" data-i18n="refund.s6.title">Dispute Resolution</h2>
                 </div>
                 <p data-i18n="refund.s6.intro">If you disagree with a refund decision:</p>
