--- a/public/terms.html
+++ b/public/terms.html
@@ -647,7 +647,7 @@
             <!-- Section 1 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">1</div>
+                    <div class="section-number" data-i18n="terms.s1.num">1</div>
                     <h2 class="section-title" data-i18n="terms.s1.title">Acceptance of Terms</h2>
                 </div>
                 <p data-i18n="terms.s1.p1">By downloading, accessing, or using the QScrap Customer App, QScrap Driver
@@ -667,7 +667,7 @@
             <!-- Section 2 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">2</div>
+                    <div class="section-number" data-i18n="terms.s2.num">2</div>
                     <h2 class="section-title" data-i18n="terms.s2.title">Description of Service</h2>
                 </div>
                 <p data-i18n="terms.s2.intro">QScrap Services & Trading L.L.C / كيوسكراب للخدمات والتجارة ذ.م.م is a
@@ -686,7 +686,7 @@
             <!-- Section 3 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">3</div>
+                    <div class="section-number" data-i18n="terms.s3.num">3</div>
                     <h2 class="section-title" data-i18n="terms.s3.title">User Accounts</h2>
                 </div>
                 <p data-i18n="terms.s3.intro">To use our services, you must:</p>
@@ -705,7 +705,7 @@
             <!-- Section 4 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">4</div>
+                    <div class="section-number" data-i18n="terms.s4.num">4</div>
                     <h2 class="section-title" data-i18n="terms.s4.title">Orders and Payments</h2>
                 </div>
                 <ul>
@@ -728,7 +728,7 @@
             <!-- Section 5 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">5</div>
+                    <div class="section-number" data-i18n="terms.s5.num">5</div>
                     <h2 class="section-title" data-i18n="terms.s5.title">Warranties and Returns</h2>
                 </div>
                 <ul>
@@ -747,7 +747,7 @@
             <!-- Section 6 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">6</div>
+                    <div class="section-number" data-i18n="terms.s6.num">6</div>
                     <h2 class="section-title" data-i18n="terms.s6.title">Prohibited Activities</h2>
                 </div>
                 <p data-i18n="terms.s6.intro">You may not:</p>
@@ -765,7 +765,7 @@
             <!-- Section 7 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">7</div>
+                    <div class="section-number" data-i18n="terms.s7.num">7</div>
                     <h2 class="section-title" data-i18n="terms.s7.title">Limitation of Liability</h2>
                 </div>
                 <p data-i18n="terms.s7.intro">QScrap acts as a marketplace facilitator. To the maximum extent permitted
@@ -791,7 +791,7 @@
             <!-- Section 8 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">8</div>
+                    <div class="section-number" data-i18n="terms.s8.num">8</div>
                     <h2 class="section-title" data-i18n="terms.s8.title">Intellectual Property</h2>
                 </div>
                 <p data-i18n="terms.s8.text">All content, trademarks, logos, and intellectual property on the Platform
@@ -804,7 +804,7 @@
             <!-- Section 9 -->
             <article class="section-card">
                 <div class="section-header">
-                    <div class="section-number">9</div>
+                    <div class="section-number" data-i18n="terms.s9.num">9</div>
                     <h2 class="section-title" data-i18n="terms.s9.title">Governing Law & Disputes</h2>
                 </div>
                 <p data-i18n="terms.s9.p1">These Terms of Service are governed by the laws of the State of Qatar. Any
