Fix testimonials RTL layout - Avatar letters translated to Arabic (ر, أ) - Avatar positioned on RIGHT in RTL via existing row-reverse

--- a/public/partners.html
+++ b/public/partners.html
@@ -1848,7 +1848,7 @@
                         3 months. The dashboard is easy to use, and payouts are always on time. Best business decision
                         we made."</p>
                     <div class="testimonial-author">
-                        <div class="testimonial-avatar">R</div>
+                        <div class="testimonial-avatar" data-i18n="testimonial1.initial">R</div>
                         <div class="testimonial-info">
                             <h4 data-i18n="testimonial1.name">Rajesh Krishnan</h4>
                             <p data-i18n="testimonial1.business">Krishnan Auto Parts, Doha</p>
@@ -1859,7 +1859,7 @@
                     <p class="testimonial-quote" data-i18n="testimonial2.quote">"We used to struggle finding customers.
                         Now orders come to us daily. The delivery network saves us so much time and hassle."</p>
                     <div class="testimonial-author">
-                        <div class="testimonial-avatar">A</div>
+                        <div class="testimonial-avatar" data-i18n="testimonial2.initial">A</div>
                         <div class="testimonial-info">
                             <h4 data-i18n="testimonial2.name">Ahmed Hassan</h4>
                             <p data-i18n="testimonial2.business">Hassan Motors, Industrial Area</p>
