Fix step circles and Arabic copyright format - partners.html: step circles 70x70px perfect circles with gold shadow - All pages: Arabic copyright format (كيوسكراب © 2026) for RTL reading

--- a/public/partners.html
+++ b/public/partners.html
@@ -727,17 +727,18 @@
         }
 
         .step-number {
-            width: 60px;
-            height: 140px;
+            width: 70px;
+            height: 70px;
             background: linear-gradient(135deg, var(--gold) 0%, var(--gold-dark) 100%);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             margin: 0 auto 20px;
-            font-size: 24px;
+            font-size: 26px;
             font-weight: 800;
             color: var(--black);
+            box-shadow: 0 8px 24px rgba(201, 162, 39, 0.35);
         }
 
         .step-title {
