RTL and translation fixes - partners.html: Avatar on RIGHT (row not row-reverse) - privacy.html: Footer compliance text, back link, address all translated - legal-pages.js: Added Arabic translations for compliance, backHome, address

--- a/public/partners.html
+++ b/public/partners.html
@@ -100,7 +100,8 @@
         }
 
         html[dir="rtl"] .testimonial-author {
-            flex-direction: row-reverse;
+            /* In RTL: row makes first item (avatar) go to RIGHT */
+            flex-direction: row;
         }
 
         html[dir="rtl"] .testimonial-info {
