--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1023,7 +1023,8 @@
                         <div class="company-icon">📍</div>
                         <div>
                             <div class="company-item-label" data-i18n="privacy.contact.address">Address</div>
-                            <div class="company-item-value">Industrial Area, Street 10<br>P.O. Box 32544, Doha, Qatar
+                            <div class="company-item-value" data-i18n="privacy.contact.addressValue">Industrial Area,
+                                Street 10<br>P.O. Box 32544, Doha, Qatar
                             </div>
                         </div>
                     </div>
@@ -1044,10 +1045,11 @@
     <!-- Footer -->
     <footer class="footer">
         <p data-i18n="footer.copyright">© 2026 QScrap Services & Trading L.L.C. All rights reserved.</p>
-        <p style="margin-top: 8px;">Compliant with Google Play Developer Program Policies and Qatar's Personal Data
+        <p style="margin-top: 8px;" data-i18n="footer.compliance">Compliant with Google Play Developer Program Policies
+            and Qatar's Personal Data
             Protection Law.</p>
-        <p style="margin-top: 12px;"><a href="/">Back to QScrap Home</a> • <a href="/terms.html"
-                data-i18n="footer.terms">Terms of Service</a>
+        <p style="margin-top: 12px;"><a href="/" data-i18n="footer.backHome">Back to QScrap Home</a> • <a
+                href="/terms.html" data-i18n="footer.terms">Terms of Service</a>
         </p>
     </footer>
 
