--- a/public/index.html
+++ b/public/index.html
@@ -423,6 +423,27 @@
     </script>
 
     <link rel="stylesheet" href="/css/main.css">
+
+    <!-- Particle container styles -->
+    <style>
+        #particles-hero {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            pointer-events: none;
+        }
+
+        .hero .container {
+            position: relative;
+            z-index: 2;
+        }
+    </style>
+
+    <!-- tsParticles - Lightweight particle system -->
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.12.0/tsparticles.slim.bundle.min.js"></script>
 </head>
 
 <body>
@@ -477,6 +498,8 @@
             <div class="hero-bg-slide"></div>
         </div>
         <div class="hero-overlay"></div>
+        <!-- Ambient Particle Background - Intelligent Network Style -->
+        <div id="particles-hero"></div>
         <div class="container">
             <div class="hero-content">
                 <div class="hero-badge">
@@ -1062,6 +1085,97 @@
                 }
             });
         })();
+    </script>
+
+    <!-- Ambient Particle System - Intelligent Network -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            if (typeof tsParticles === 'undefined') return;
+
+            // Check if RTL for direction awareness
+            const isRTL = document.documentElement.getAttribute('dir') === 'rtl';
+            const isMobile = window.innerWidth < 768;
+
+            tsParticles.load("particles-hero", {
+                fullScreen: { enable: false },
+                fpsLimit: isMobile ? 30 : 60,
+                particles: {
+                    number: {
+                        value: isMobile ? 25 : 50,
+                        density: { enable: true, area: 1000 }
+                    },
+                    color: {
+                        value: ["#C9A227", "#D4AF37", "#B8860B", "#8D1B3D"]
+                    },
+                    shape: { type: "circle" },
+                    opacity: {
+                        value: { min: 0.1, max: 0.35 },
+                        animation: {
+                            enable: true,
+                            speed: 0.3,
+                            minimumValue: 0.1,
+                            sync: false
+                        }
+                    },
+                    size: {
+                        value: { min: 1.5, max: 4 },
+                        animation: {
+                            enable: true,
+                            speed: 1,
+                            minimumValue: 1,
+                            sync: false
+                        }
+                    },
+                    move: {
+                        enable: true,
+                        speed: 0.4,
+                        direction: isRTL ? "left" : "right",
+                        random: true,
+                        straight: false,
+                        outModes: { default: "out" }
+                    },
+                    links: {
+                        enable: true,
+                        distance: isMobile ? 100 : 140,
+                        color: "#C9A227",
+                        opacity: 0.15,
+                        width: 1
+                    }
+                },
+                interactivity: {
+                    detectsOn: "canvas",
+                    events: {
+                        onHover: {
+                            enable: !isMobile,
+                            mode: "grab"
+                        },
+                        resize: true
+                    },
+                    modes: {
+                        grab: {
+                            distance: 150,
+                            links: { opacity: 0.3 }
+                        }
+                    }
+                },
+                detectRetina: true,
+                background: { color: "transparent" }
+            });
+
+            // Update direction on language change
+            const observer = new MutationObserver(function (mutations) {
+                mutations.forEach(function (mutation) {
+                    if (mutation.attributeName === 'dir') {
+                        const container = tsParticles.domItem(0);
+                        if (container) {
+                            const newIsRTL = document.documentElement.getAttribute('dir') === 'rtl';
+                            container.options.particles.move.direction = newIsRTL ? "left" : "right";
+                        }
+                    }
+                });
+            });
+            observer.observe(document.documentElement, { attributes: true });
+        });
     </script>
 
     <script src="/js/homepage.js" defer></script>
