--- a/public/index.html
+++ b/public/index.html
@@ -432,13 +432,20 @@
             left: 0;
             width: 100%;
             height: 100%;
-            z-index: 1;
+            z-index: 3;
+            /* Above overlay (z-index: 2), below content */
             pointer-events: none;
         }
 
         .hero .container {
             position: relative;
-            z-index: 2;
+            z-index: 5;
+            /* Above particles */
+        }
+
+        .hero-overlay {
+            z-index: 2 !important;
+            /* Ensure overlay is below particles */
         }
     </style>
 
