--- a/public/partners.html
+++ b/public/partners.html
@@ -477,7 +477,8 @@
         .hero-overlay {
             position: absolute;
             inset: 0;
-            background: linear-gradient(135deg, rgba(141, 27, 61, 0.88) 0%, rgba(26, 26, 26, 0.92) 100%);
+            /* Reduced opacity to reveal particles */
+            background: linear-gradient(135deg, rgba(141, 27, 61, 0.7) 0%, rgba(26, 26, 26, 0.75) 100%);
         }
 
         .hero-content {
@@ -1609,6 +1610,33 @@
             }
         }
     </style>
+
+    <!-- Particle container styles -->
+    <style>
+        #particles-hero {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 3;
+            /* Above overlay, below content */
+            pointer-events: none;
+        }
+
+        .hero-content {
+            position: relative;
+            z-index: 5;
+            /* Above particles */
+        }
+
+        .hero-overlay {
+            z-index: 2 !important;
+        }
+    </style>
+
+    <!-- tsParticles - Lightweight particle system -->
+    <script src="https://cdn.jsdelivr.net/npm/tsparticles-slim@2.12.0/tsparticles.slim.bundle.min.js"></script>
 </head>
 
 <body>
@@ -1640,6 +1668,8 @@
     <section class="hero">
         <div class="hero-bg"></div>
         <div class="hero-overlay"></div>
+        <!-- Ambient Particle Background - Intelligent Network Style -->
+        <div id="particles-hero"></div>
         <div class="hero-content">
             <div class="hero-badge" data-i18n="hero.badge">🚀 Partner Program</div>
             <h1 data-i18n="hero.title">Grow Your <span>Parts Business</span> With Qatar's #1 Marketplace</h1>
@@ -2330,6 +2360,97 @@
                 spinner.style.display = 'none';
             }
         }
+    </script>
+
+    <!-- Ambient Particle System - Intelligent Network -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            if (typeof tsParticles === 'undefined') return;
+
+            // Check if RTL for direction awareness
+            const isRTL = document.documentElement.getAttribute('dir') === 'rtl';
+            const isMobile = window.innerWidth < 768;
+
+            tsParticles.load("particles-hero", {
+                fullScreen: { enable: false },
+                fpsLimit: isMobile ? 30 : 60,
+                particles: {
+                    number: {
+                        value: isMobile ? 25 : 50,
+                        density: { enable: true, area: 1000 }
+                    },
+                    color: {
+                        value: ["#C9A227", "#D4AF37", "#B8860B", "#8D1B3D"]
+                    },
+                    shape: { type: "circle" },
+                    opacity: {
+                        value: { min: 0.2, max: 0.5 },
+                        animation: {
+                            enable: true,
+                            speed: 0.3,
+                            minimumValue: 0.15,
+                            sync: false
+                        }
+                    },
+                    size: {
+                        value: { min: 1.5, max: 4 },
+                        animation: {
+                            enable: true,
+                            speed: 1,
+                            minimumValue: 1,
+                            sync: false
+                        }
+                    },
+                    move: {
+                        enable: true,
+                        speed: 0.4,
+                        direction: isRTL ? "left" : "right",
+                        random: true,
+                        straight: false,
+                        outModes: { default: "out" }
+                    },
+                    links: {
+                        enable: true,
+                        distance: isMobile ? 100 : 140,
+                        color: "#C9A227",
+                        opacity: 0.25,
+                        width: 1
+                    }
+                },
+                interactivity: {
+                    detectsOn: "canvas",
+                    events: {
+                        onHover: {
+                            enable: !isMobile,
+                            mode: "grab"
+                        },
+                        resize: true
+                    },
+                    modes: {
+                        grab: {
+                            distance: 150,
+                            links: { opacity: 0.4 }
+                        }
+                    }
+                },
+                detectRetina: true,
+                background: { color: "transparent" }
+            });
+
+            // Update direction on language change
+            const observer = new MutationObserver(function (mutations) {
+                mutations.forEach(function (mutation) {
+                    if (mutation.attributeName === 'dir') {
+                        const container = tsParticles.domItem(0);
+                        if (container) {
+                            const newIsRTL = document.documentElement.getAttribute('dir') === 'rtl';
+                            container.options.particles.move.direction = newIsRTL ? "left" : "right";
+                        }
+                    }
+                });
+            });
+            observer.observe(document.documentElement, { attributes: true });
+        });
     </script>
 
     <!-- Partners i18n System -->
