--- a/public/index.html
+++ b/public/index.html
@@ -851,21 +851,62 @@
             <h2 class="cta-title" data-i18n="cta.title">Ready to Find Your Part?</h2>
             <p class="cta-subtitle" data-i18n="cta.subtitle">Download the QScrap app and get started in minutes. It's
                 free!</p>
+
+            <!-- Primary CTA Buttons -->
             <div class="cta-buttons">
-                <a href="#" class="btn-hero-primary">
+                <a href="https://apps.apple.com/qa/app/qscrap/id6740043847" class="btn-hero-primary" target="_blank"
+                    rel="noopener">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z" />
                     </svg>
                     <span data-i18n="cta.ios">Download for iOS</span>
                 </a>
-                <a href="#" class="btn-hero-secondary">
+                <a href="https://play.google.com/store/apps/details?id=qa.qscrap.customer" class="btn-hero-secondary"
+                    target="_blank" rel="noopener">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
                         <path
                             d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.937 6.333 8.635-8.635zm3.199-3.198l2.807 1.626a1 1 0 0 1 0 1.73l-2.808 1.626L15.206 12l2.492-2.491zM5.864 2.658L16.802 8.99l-2.303 2.303-8.635-8.635z" />
                     </svg>
                     <span data-i18n="cta.android">Download for Android</span>
                 </a>
+            </div>
+
+            <!-- QR Divider -->
+            <div class="qr-divider">
+                <span class="qr-divider-line"></span>
+                <span class="qr-divider-text" data-i18n="cta.orScan">Or scan to download</span>
+                <span class="qr-divider-line"></span>
+            </div>
+
+            <!-- QR Codes Row -->
+            <div class="qr-codes-row">
+                <div class="qr-item">
+                    <div class="qr-code-box">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://apps.apple.com/qa/app/qscrap/id6740043847&bgcolor=ffffff&color=8D1B3D&format=svg"
+                            alt="iOS QR" width="120" height="120" loading="lazy">
+                        <div class="qr-platform-icon">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="#8D1B3D">
+                                <path
+                                    d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <span class="qr-label">App Store</span>
+                </div>
+                <div class="qr-item">
+                    <div class="qr-code-box">
+                        <img src="https://api.qrserver.com/v1/create-qr-code/?size=120x120&data=https://play.google.com/store/apps/details?id=qa.qscrap.customer&bgcolor=ffffff&color=8D1B3D&format=svg"
+                            alt="Android QR" width="120" height="120" loading="lazy">
+                        <div class="qr-platform-icon">
+                            <svg width="18" height="18" viewBox="0 0 24 24" fill="#8D1B3D">
+                                <path
+                                    d="M3.609 1.814L13.792 12 3.61 22.186a.996.996 0 0 1-.61-.92V2.734a1 1 0 0 1 .609-.92zm10.89 10.893l2.302 2.302-10.937 6.333 8.635-8.635zm3.199-3.198l2.807 1.626a1 1 0 0 1 0 1.73l-2.808 1.626L15.206 12l2.492-2.491zM5.864 2.658L16.802 8.99l-2.303 2.303-8.635-8.635z" />
+                            </svg>
+                        </div>
+                    </div>
+                    <span class="qr-label">Google Play</span>
+                </div>
             </div>
         </div>
     </section>
