Fix inline CSS logo sizing in all secondary pages: partners, about, privacy, refund, terms - max-height 50px, max-width 200px

--- a/public/partners.html
+++ b/public/partners.html
@@ -384,7 +384,9 @@
         }
 
         .nav-logo img {
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
             width: auto;
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
             filter: drop-shadow(0 4px 12px rgba(141, 27, 61, 0.15));
@@ -672,7 +674,9 @@
 
         .benefit-icon {
             width: 80px;
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
             background: linear-gradient(135deg, var(--qatar-maroon) 0%, var(--qatar-maroon-dark) 100%);
             border-radius: 20px;
             display: flex;
@@ -1282,7 +1286,9 @@
 
         .success-icon {
             width: 80px;
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
             background: var(--success-light);
             border-radius: 50%;
             display: flex;
