--- a/public/about.html
+++ b/public/about.html
@@ -255,7 +255,9 @@
         }
 
         .nav-logo img {
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
         }
 
         .nav-logo:hover img {
@@ -569,7 +571,9 @@
 
         .value-icon {
             width: 80px;
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
             background: linear-gradient(135deg, var(--qatar-maroon-light) 0%, #fff 100%);
             border-radius: 24px;
             display: flex;
