--- a/public/terms.html
+++ b/public/terms.html
@@ -88,7 +88,9 @@
         }
 
         .nav-logo img {
-            height: 140px;
+            height: auto;
+            max-height: 50px;
+            max-width: 200px;
             width: auto;
             transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1);
             filter: drop-shadow(0 4px 12px rgba(141, 27, 61, 0.15));
