--- a/public/partners.html
+++ b/public/partners.html
@@ -1615,6 +1615,30 @@
                 justify-content: center;
             }
 
+            /* ===== Mobile Footer Grid Fix ===== */
+            .footer-grid {
+                grid-template-columns: 1fr 1fr;
+                gap: 32px;
+            }
+
+            .footer-brand {
+                grid-column: span 2;
+                text-align: center;
+            }
+
+            .footer-brand p {
+                max-width: 100%;
+            }
+
+            .footer-social {
+                justify-content: center;
+            }
+
+            .footer-bottom {
+                flex-direction: column;
+                text-align: center;
+            }
+
             /* ===== Mobile Navigation Fix ===== */
             .nav-container {
                 padding: 12px 16px;
@@ -1704,6 +1728,27 @@
                 flex: 1;
                 text-align: center;
                 justify-content: center;
+            }
+
+            /* ===== Extra Small Footer - Single Column ===== */
+            .footer-grid {
+                grid-template-columns: 1fr;
+                gap: 24px;
+                text-align: center;
+            }
+
+            .footer-brand {
+                grid-column: span 1;
+            }
+
+            .footer-title {
+                margin-bottom: 16px;
+            }
+
+            .footer-links {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
             }
         }
     </style>
