Add Starter tier (299 QR/8%) to partners.html
- Added Starter tier between Pay-Per-Sale and Gold
- Updated tiers-grid from 3 to 4 columns (1300px max-width)
- Aligns website with unified pricing model from QScrap Brain

Tiers: Pay-Per-Sale (15%) → Starter (299/8%) → Gold (999/5%) → Platinum (2499/3%)

--- a/public/partners.html
+++ b/public/partners.html
@@ -781,9 +781,9 @@
 
         .tiers-grid {
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 32px;
-            max-width: 1000px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 24px;
+            max-width: 1300px;
             margin: 0 auto;
         }
 
@@ -1992,6 +1992,22 @@
                         <li data-i18n="tier1.feature5">Guaranteed 7-day payouts</li>
                     </ul>
                     <a href="#apply" class="tier-cta" data-i18n="tier1.cta">Get Started Free</a>
+                </div>
+
+                <div class="tier-card">
+                    <h3 class="tier-name" data-i18n="tierStarter.name">Starter</h3>
+                    <div class="tier-commission"><span data-i18n="tierStarter.commission">8%</span><span
+                            data-i18n="tierStarter.perOrder"> per order</span></div>
+                    <p class="tier-desc" data-i18n="tierStarter.desc">For growing garages</p>
+                    <ul class="tier-features">
+                        <li data-i18n="tierStarter.feature1">QAR 299/month subscription</li>
+                        <li data-i18n="tierStarter.feature2">Priority listing in search</li>
+                        <li data-i18n="tierStarter.feature3">Basic analytics dashboard</li>
+                        <li data-i18n="tierStarter.feature4">Email & chat support</li>
+                        <li data-i18n="tierStarter.feature5">Standard 7-day payouts</li>
+                        <li data-i18n="tierStarter.feature6">Showcase up to 20 products</li>
+                    </ul>
+                    <a href="#apply" class="tier-cta" data-i18n="tierStarter.cta">Start Growing</a>
                 </div>
 
                 <div class="tier-card featured">
